--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <app-mini-calendar></app-mini-calendar>
 
-<span #types *ngFor="let typeOfMission of typesOfMission">
+<span #types *ngFor="let typeOfMission of typesOfMission" dir="rtl">
   <h3 md-subheader>{{ typeOfMission }}</h3>
     <md-selection-list>
-      <md-list-option *ngFor="let missionType of missionTypes[typeOfMission]">
-        {{ missionType }}
+      <md-list-option *ngFor="let missionType of missionTypes[typeOfMission]" dir="ltr">
+       {{ missionType }} 
       </md-list-option>
     </md-selection-list>
 </span>
