--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,45 @@
 #wholeCalendar {
-    width: 10%;    
+  width: 10%;
+}
+
+/* #content-left {
+  position: absolute;
+  left: 0;
+  padding-top: auto;
+  padding-bottom: auto;
+}
+
+#content-right {
+  position: absolute;
+  right: 0;
+  padding-top: auto;
+  padding-bottom: auto;
+}
+
+.content {
+  top: 10%;
+} */
+
+#container {
+  position: relative;
+}
+
+#container>* {
+  position: absolute;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.top {
+  top: 0;
+}
+
+.bottom {
+  bottom: 0;
 }
