--- a/src/app/core/sidebar/mini-calendar/mini-calendar.component.html
+++ b/src/app/core/sidebar/mini-calendar/mini-calendar.component.html
@@ -1,1 +1,2 @@
-<md-calendar ng-model="selectedDate" (click)="onClick($event)"></md-calendar>
+<md-calendar (click)="onClick($event)" ></md-calendar>
+<!-- (click)="onClick($event)" -->
