--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,28 +1,30 @@
 <div style="width:100%; height:15%; ">
-  <div class="pre">
-    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
-    <div  style="height:40%;width:30%;">
+  
+  <div class="pre" style="direction:rtl">
+    <h3 style="direction:rtl" >{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
+    
+    <div  style="height:40%;width:30%; direction:rtl" >
       <button (click)="view = 'month'" [class.active]="view === 'month'" >
-        Month
+        חודש
       </button>
       <button (click)="view = 'week'" [class.active]="view === 'week'" >
-        Week
+        שבוע
       </button>
       <button (click)="view = 'day'" [class.active]="view === 'day'" >
-        Day
+        יום
       </button>
     </div>
   </div>
   <div style="width:100%">
     <div [ngSwitch]="view" style="width:100%">
       <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen"
-        (dayClicked)="dayClicked($event.day)" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
+        (dayClicked)="dayClicked($event.day)" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" [weekStartsOn]="weekStartsOn" [weekendDays]="weekendDays" style="direction:rtl" (beforeViewRender)="beforeMonthViewRender($event)">
       </mwl-calendar-month-view>
       <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)">
+        (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" [weekStartsOn]="weekStartsOn" [weekendDays]="weekendDays" style="direction:rtl">
       </mwl-calendar-week-view>
       <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)">
+        (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" style="direction:rtl">
       </mwl-calendar-day-view>
     </div>
   </div>
