--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <app-mini-calendar></app-mini-calendar>
 
 <span #types *ngFor="let typeOfMission of typesOfMission" dir="rtl">
-  <h3 md-subheader>{{ typeOfMission.text }}</h3>
+  <h3 md-subheader>{{ typeOfMission.text }}</h3>  
     <md-selection-list>
       <span *ngFor="let missionType of missionTypes" dir="ltr">
-          <md-list-option *ngIf="missionType.type == typeOfMission.code" dir="ltr" style="float:right;">
+          <md-list-option *ngIf="missionType.type == typeOfMission.code" dir="ltr" style="float:right;" (click)="onClick(missionType)">
             {{ missionType.name }}
           </md-list-option>
       </span>
