--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,31 +1,34 @@
 <div style="width:100%; height:15%; ">
-  
+
   <div class="pre" style="direction:rtl">
-    <h3 style="direction:rtl" >{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
-    
-    <div  style="height:40%;width:30%; direction:rtl" >
-      <button (click)="view = 'month'" [class.active]="view === 'month'" >
+    <h3 style="direction:rtl">{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
+
+    <div style="height:40%;width:30%; direction:rtl">
+      <button (click)="view = 'month'" [class.active]="view === 'month'">
         חודש
       </button>
-      <button (click)="view = 'week'" [class.active]="view === 'week'" >
+      <button (click)="view = 'week'" [class.active]="view === 'week'">
         שבוע
       </button>
-      <button (click)="view = 'day'" [class.active]="view === 'day'" >
+      <button (click)="view = 'day'" [class.active]="view === 'day'">
         יום
       </button>
     </div>
   </div>
-  
+
   <!-- (events)?filterEvents: filterBy -->
-  <div *ngIf="events$ | async as events" #cal style="width:100%">      
+  <div *ngIf="events$ | async as events" #cal style="width:100%">
     <div [ngSwitch]="view" style="width:100%">
-      <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen"
-        (dayClicked)="dayClicked($event.day)" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" [weekStartsOn]="weekStartsOn" [weekendDays]="weekendDays" style="direction:rtl" (beforeViewRender)="beforeMonthViewRender($event)">
+      <mwl-calendar-month-view *ngSwitchCase="'month'" [viewDate]="viewDate" [events]="events | filterEvents: (filterBy)" [refresh]="refresh"
+        [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)" (eventClicked)="handleEvent('Clicked', $event.event)"
+        (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" [weekStartsOn]="weekStartsOn" [weekendDays]="weekendDays"
+        style="direction:rtl" (beforeViewRender)="beforeMonthViewRender($event)">
       </mwl-calendar-month-view>
-      <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
-        (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" [weekStartsOn]="weekStartsOn" [weekendDays]="weekendDays" style="direction:rtl">
+      <mwl-calendar-week-view *ngSwitchCase="'week'" [viewDate]="viewDate" [events]="events| filterEvents: (filterBy)" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
+        (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" [weekStartsOn]="weekStartsOn" [weekendDays]="weekendDays"
+        style="direction:rtl">
       </mwl-calendar-week-view>
-      <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
+      <mwl-calendar-day-view *ngSwitchCase="'day'" [viewDate]="viewDate" [events]="events| filterEvents: (filterBy)" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
         (eventTimesChanged)="eventTimesChanged($event)" [locale]="locale" style="direction:rtl">
       </mwl-calendar-day-view>
     </div>
