added dialogs and filtering is working

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,7 +1,8 @@
 <span class="done" layout="row" layout-align="end end">
-  <button md-fab>
+  <!-- <button md-fab>
       <md-icon>check circle</md-icon>
-  </button>
+  </button> -->
+  <app-add-missionType> </app-add-missionType>
 </span>
 
 <md-toolbar class="done2" dir="rtl">
