--- a/src/app/dialogs/add-mission/dialog/dialog.component.html
+++ b/src/app/dialogs/add-mission/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<div dir="rtl">
+<!-- <div dir="rtl">
 
   <div style="margin-right:31.5%;font-weight: bolder">הוספת תורנות</div>
   <td-steps>
@@ -17,4 +17,4 @@
       Mark this step complete and get a summary
     </td-step>
   </td-steps>
-</div>
+</div> -->
