--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,7 +2,7 @@
   <!-- <button md-fab>
       <md-icon>check circle</md-icon>
   </button> -->
-  <app-add-mission> </app-add-mission>
+  <app-add-missionType> </app-add-missionType>
 </span>
 
 <md-toolbar class="done2" dir="rtl">
