--- a/src/app/dialogs/add-mission/add-mission.component.html
+++ b/src/app/dialogs/add-mission/add-mission.component.html
@@ -1,3 +1,3 @@
 <button md-fab (click)="openDialog()" color="accent">
-    <md-icon class="md-24">add</md-icon>
+    <md-icon>add</md-icon>
 </button>
