--- a/src/app/dialogs/add-mission/dialog/dialog.component.html
+++ b/src/app/dialogs/add-mission/dialog/dialog.component.html
@@ -59,6 +59,13 @@
 
       <td-step #step3 label="שיוך חייל" sublabel="" [state]="stateStep3" [active]="activeStep == 2" [class.no-pointer-events]="activeStep === 2"
         (activated)="activeStep2Event()" (deactivated)="deactiveStep2Event()">
+      
+        <!-- <mat-autocomplete>
+            <mat-option *ngFor="let option of options" [value]="option">
+               {{ option }}
+            </mat-option>
+         </mat-autocomplete> -->
+
       </td-step>
 
     </td-steps>
