--- a/src/app/core/nav/nav.component.html
+++ b/src/app/core/nav/nav.component.html
@@ -3,7 +3,7 @@
 
   <span style="margin: auto">שבץ נא</span>
   <md-menu #menu="mdMenu">
-    <button md-menu-item> Settings </button>
+    <a href="/settings"><button md-menu-item > Settings </button></a>
     <button md-menu-item> Help </button>
   </md-menu>
   <button md-icon-button [mdMenuTriggerFor]="menu">
