--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,8 @@
   <app-nav style="width:100%;"></app-nav>
 </div>
 
-<div class="left" style="height:40%; width:60%; margin-top:1%;">
-  <!-- <div flex="70" class="left" style="height:40%;width:60%;">             -->
-  <app-calendar style="width:100%; margin-left:5%; float:left;height:40%"></app-calendar>
-</div>
-
-<div class="right" style="width:10%;margin-right:2%;">
-  <!-- <div flex="30" class="right" style="width:10%;">             -->
-  <app-sidebar></app-sidebar>
-</div>
+<router-outlet></router-outlet>
 
 <div>
   <app-footer></app-footer>
 </div>
-
-<!-- <router-outlet></router-outlet> -->
