--- a/src/app/calendar/description-dialog.html
+++ b/src/app/calendar/description-dialog.html
@@ -12,7 +12,7 @@
     </span>
 
     <div>
-      <h3>אנשים המשובצים לשמירה:</h3>
+      <h3>אנשים המשובצים לתורנות:</h3>
       <div *ngFor="let user of data.event.meta.event.participents">
         <span *ngFor="let userToComp of users">
           <div *ngIf="user == userToComp._id">
