--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -3,12 +3,12 @@
 <span *ngIf="!rerender">
   <span #types *ngFor="let typeOfMission of typesOfMission" dir="rtl">
     <h3 md-subheader>{{ typeOfMission.text }}</h3>
-    <md-selection-list>
-      <div *ngFor="let missionType of missionTypes" dir="rtl">
+    <md-selection-list style="max-height:10px;" >
+      <ng-container *ngFor="let missionType of missionTypes">
         <md-list-option *ngIf="missionType.type == typeOfMission.code" dir="ltr" style="float:right;width:100%" (click)="onClick(missionType)">
           <span dir="rtl">{{ missionType.name }}</span>
         </md-list-option>
-      </div>
+      </ng-container>
     </md-selection-list>
   </span>
 </span>
